# ComputerGraphics

./: .travis.yml  CMakeLists.txt  README.md  readme.txt
Doc/: Infographics.vpp  Infographics.vpp.bak_001d  readme.txt
Resources/Goblin/: goblin.max
Resources/Humain/: humain.FBX  humain2.FBX  yeux.FBX
Resources/Skybox/: HandMadeSky_bk.tga  HandMadeSky_bk2.tga  HandMadeSky_bk2.xcf  HandMadeSky_dn.tga  HandMadeSky_up.tga
Src/: AbstractObject.cpp  AbstractObject.h  CubeObject.cpp  CubeObject.h  Echantillonnage.h  GroupObject.cpp  GroupObject.h  KochShader.h  LightObject.cpp  LightObject.h  Mesh.cpp  Mesh.h  MirrorObject.cpp  MirrorObject.h  Model.cpp  Model.h  ModelObject.cpp  ModelObject.h  ModelShader.h  ModelShaderBlinnPhong.h  ModelShaderLambert.h  ParametricCurveObject.cpp  ParametricCurveObject.h  ParametricSurfaceObject.cpp  ParametricSurfaceObject.h  PerlinNoise.cpp  PerlinNoise.h  PixelAccess.h  PostProcessColorShader.h  PostProcessShader.h  PrimitiveObject.cpp  PrimitiveObject.h  PrimitiveShader.h  QuadObject.cpp  QuadObject.h  QuadShader.h  Ray.h  SBPyramidObject.cpp  SBPyramidObject.h  Scene.cpp  (+30 more)
